--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -13,8 +13,6 @@ jobs:
         with:
           flags: smart-tests
           verbose: true
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: ea674bd9-85d7-4129-93d1-76b53ff9749c
           slug: jack-kj/study-ts
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     
