--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -8,6 +8,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4-beta
         with:
