feat(codecov): using ts template

--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -6,13 +6,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up Node 18
+        uses: actions/setup-node@v3
         with:
-          fetch-depth: 0
+          node-version: 18
       - name: Install dependencies
         run: npm install
-
-      - name: Run tests
-        run: npm test
+      - name: Run tests and collect coverage
+        run: npm run test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4-beta
         with:
@@ -20,4 +21,5 @@ jobs:
           verbose: true
           token: ea674bd9-85d7-4129-93d1-76b53ff9749c
           slug: jack-kj/study-ts
-    
+        env:
+          CODECOV_TOKEN: ea674bd9-85d7-4129-93d1-76b53ff9749c
